--- a/Qr-code/index.html
+++ b/Qr-code/index.html
@@ -86,7 +86,7 @@
 </head>
 
 <body>
-  <section>
+  <section role="main">
     <img src="images/image-qr-code.png" alt="QRコード">
     <h1>Improve your front-end skills by building projects</h1>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
