--- a/chat-app-css-illustration-master/index.html
+++ b/chat-app-css-illustration-master/index.html
@@ -31,29 +31,31 @@
       <img src="images/avatar.jpg" alt="avatar">
       <section>
         <h1>Samuel Green</h1>
-        <p>Available to Walk</p>
+        <h2>Available to Walk</h2>
       </section>
     </div>
+    <div class="mobile-main">
+      <p class="comment-out">That sounds great. I’d be happy with that.</p>
+      <p class="comment-out">Could you send over some pictures of your dog, please?</p>
 
-    <p>That sounds great. I’d be happy with that.</p>
-    <p>Could you send over some pictures of your dog, please?</p>
+      <div class="flex comment-in right">
+        <div>
+          <img src="images/dog-image-1.jpg" alt="dog-image-1">
+          <img src="images/dog-image-2.jpg" alt="dog-image-2">
+          <img src="images/dog-image-3.jpg" alt="dog-image-3">
+        </div>
+      </div>
 
-    <div class="flex">
-      <img src="images/dog-image-1.jpg" alt="dog-image-1">
-      <img src="images/dog-image-2.jpg" alt="dog-image-2">
-      <img src="images/dog-image-3.jpg" alt="dog-image-3">
+      <p class="comment-in">Here are a few pictures. She’s a happy girl!</p>
+      <p class="comment-in">Can you make it?</p>
+
+      <p class="comment-out">She looks so happy! The time we discussed works. How long shall I take her out for?</p>
+
+      <p class="comment-walk">30 minute walk <span>$29</span></p>
+      <p class="comment-walk">1 hour walk <span>$49</span></p>
+
+      <p class="comment-new">Type a message…</p>
     </div>
-
-    <p>Here are a few pictures. She’s a happy girl!</p>
-    <p>Can you make it?</p>
-
-    <p>She looks so happy! The time we discussed works. How long shall I take her out for?</p>
-
-    <p>30 minute walk <span>$29</span></p>
-    <p>1 hour walk <span>$49</span></p>
-
-    <p>Type a message…</p>
-
   </div>
   <!-- Simple booking
 
