--- a/chat-app-css-illustration-master/index.html
+++ b/chat-app-css-illustration-master/index.html
@@ -25,36 +25,48 @@
 </head>
 
 <body>
-
-  <div class="mobile">
-    <div class="mobile-top flex">
-      <img src="images/avatar.jpg" alt="avatar">
-      <section>
-        <h1>Samuel Green</h1>
-        <h2>Available to Walk</h2>
-      </section>
-    </div>
-    <div class="mobile-main">
-      <p class="comment-out">That sounds great. I’d be happy with that.</p>
-      <p class="comment-out">Could you send over some pictures of your dog, please?</p>
-
-      <div class="flex comment-in right">
-        <div>
-          <img src="images/dog-image-1.jpg" alt="dog-image-1">
-          <img src="images/dog-image-2.jpg" alt="dog-image-2">
-          <img src="images/dog-image-3.jpg" alt="dog-image-3">
-        </div>
+  <div class="flex">
+    <div class="topdowncolor"></div>
+    <div class="whitecontent"></div>
+    <div class="mobile">
+      <div class="mobile-top flex">
+        <img src="images/avatar.jpg" alt="avatar">
+        <section>
+          <h1>Samuel Green</h1>
+          <h2>Available to Walk</h2>
+        </section>
+        <button class="three-dot-leader" type="button">
+          <span class="dot"></span>
+        </button>
       </div>
+      <div class="mobile-main">
+        <p class="comment-out">That sounds great. I’d be happy with that.</p>
+        <p class="comment-out">Could you send over some pictures of your dog, please?</p>
 
-      <p class="comment-in">Here are a few pictures. She’s a happy girl!</p>
-      <p class="comment-in">Can you make it?</p>
+        <div class="flex comment-in right">
+          <div>
+            <img src="images/dog-image-1.jpg" alt="dog-image-1">
+            <img src="images/dog-image-2.jpg" alt="dog-image-2">
+            <img src="images/dog-image-3.jpg" alt="dog-image-3">
+          </div>
+        </div>
 
-      <p class="comment-out">She looks so happy! The time we discussed works. How long shall I take her out for?</p>
+        <p class="comment-in">Here are a few pictures. She’s a happy girl!</p>
+        <p class="comment-in">Can you make it?</p>
 
-      <p class="comment-walk">30 minute walk <span>$29</span></p>
-      <p class="comment-walk">1 hour walk <span>$49</span></p>
+        <p class="comment-out">She looks so happy! The time we discussed works. How long shall I take her out for?</p>
 
-      <p class="comment-new">Type a message…</p>
+        <p class="comment-walk">30 minute walk <span>$29</span></p>
+        <p class="comment-walk">1 hour walk <span>$49</span></p>
+
+        <p class="comment-new">Type a message…</p>
+      </div>
+    </div>
+    <div class="main">
+      <h3>Simple booking</h3>
+      <p>Stay in touch with our dog walkers through the chat interface. This makes it easy to discuss arrangements and
+        make bookings. Once the walk has been completed you can rate your walker and book again all through the chat.
+      </p>
     </div>
   </div>
   <!-- Simple booking
